# jobsteal

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  search-index.js
crossbeam/: fn.scope.html  fn.spawn_unsafe.html  index.html  struct.Scope.html  struct.ScopedJoinHandle.html
crossbeam/mem/: index.html  struct.CachePadded.html  trait.ZerosValid.html
crossbeam/sync/: index.html  struct.ArcCell.html  struct.AtomicOption.html  struct.MsQueue.html  struct.SegQueue.html  struct.TreiberStack.html
jobsteal/: Spawner.t.html  fn.make_pool.html  index.html  make_pool.v.html  struct.Pool.html  struct.Spawner.html
jobsteal/iter/: BorrowSpliterator.t.html  BorrowSpliteratorMut.t.html  CostMul.t.html  ExactSizeSpliterator.t.html  IntoSpliterator.t.html  SliceSplit.t.html  SliceSplitMut.t.html  Spliterator.t.html  index.html  sidebar-items.js  struct.Cloned.html  struct.CostMul.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.FlatMap.html  struct.Hide.html  struct.Map.html  struct.SliceSplit.html  struct.SliceSplitMut.html  struct.Zip.html  trait.BorrowSpliterator.html  trait.BorrowSpliteratorMut.html  trait.Callback.html  trait.Consumer.html  trait.ExactSizeSpliterator.html  trait.IntoSpliterator.html  trait.Split.html  trait.Spliterator.html
src/: arena.rs  iter.rs  job.rs  job_pool.rs  lib.rs  pool.rs  queue.rs  worker.rs
src/crossbeam/: lib.rs.html  scoped.rs.html
src/iter/: all_any.rs  collect.rs  cost_mul.rs  enumerate.rs  filter.rs  filter_map.rs  flat_map.rs  fold.rs  map.rs  mod.rs  vec.rs  (+1 more)
(+68 files in other folders)
