[package]
name = "jobsteal"
version = "0.2.0"
authors = ["rphmeier <rphmeier@gmail.com>"]
description = "A work-stealing fork-join threadpool written in Rust."
documentation = "https://rphmeier.github.io/jobsteal/"
license = "MIT/Apache-2.0"
repository = "https://github.com/rphmeier/jobsteal"


keywords = ['fork', 'join', 'job', 'threadpool', 'pool']

[dependencies]
rand = "0.3"
crossbeam = "0.1.6"

[features]
nightly = []